<resources>
    <string name="app_name">ActivityAndOrientation</string>
    <string name="phoneTxt">Phone</string>
    <string name="msgTxt">Message</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="write">Write</string>
    <string name="read">Read</string>
    <string name="shared">Shared Preference</string>
    <string name="Internal">Internal Storage</string>
    <string name="Database" />
    <string name="db">Database</string>
</resources>